# Simulator-LOB

./: .gitignore  README.md  pyproject.toml
dashboard/: simulation_dashboard.html
scripts/: build_dashboard.py  run_simulation.py
src/lob_simulator/: __init__.py  behavior.py  order_book.py  random_flow.py  simulation.py  types.py
tests/: test_behavior.py  test_order_book.py
